--- a/cfn_template.yaml
+++ b/cfn_template.yaml
@@ -3,4 +3,4 @@ Resources:
   S3Bucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: testbucket314159aaaabbbb
+      BucketName: delteMe
