--- a/cfn_template.yaml
+++ b/cfn_template.yaml
@@ -1,6 +1,43 @@
 AWSTemplateFormatVersion: '2010-09-09'
+Description: Builld S3 and inline lambda
 Resources:
   S3Bucket:
     Type: AWS::S3::Bucket
-    Properties:
+    Properties: 
       BucketName: cloudformation-build-incidentsdashboard-jaworra
+
+  lambdaFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      Description: 
+      FunctionName: "test_jaworra_cloudformation_build"
+      Handler: 
+      KmsKeyArn: 
+      MemorySize: 128
+      Role: role-arn
+      Runtime: python2.7 
+      Timeout: 
+      VpcConfig:
+        SecurityGroupIds:
+          - sg-id
+        SubnetIds:
+          - subnet-id
+      Environment:
+        Variables:
+          key1: value1 # A map of key-value pairs that the Lambda function can access
+      Code:
+        S3Bucket: 
+        S3Key: 
+        S3ObjectVersion: 
+        ZipFile: |
+          import json
+          def handler(event, context):
+          	response = {
+          		'statusCode': 200,
+          		'body': json.dumps('Hello Python')
+          	}
+          	return response
+      Tags:
+        - Key: keyname
+          Value: value   
+
