--- a/cfn_template.yaml
+++ b/cfn_template.yaml
@@ -9,26 +9,13 @@ Resources:
   lambdaFunction:
     Type: AWS::Lambda::Function
     Properties:
-      Description: 
-      FunctionName: "test_jaworra_cloudformation_build"
-      Handler: 
-      KmsKeyArn: 
+      Description: Python Function Handler
+      FunctionName: test_jaworra_cloudformation_build
+      Handler: index.handler
       MemorySize: 128
-      Role: role-arn
+      Role: arn:aws:iam::708280501988:role/lambda_generic
       Runtime: python2.7 
-      Timeout: 
-      VpcConfig:
-        SecurityGroupIds:
-          - sg-id
-        SubnetIds:
-          - subnet-id
-      Environment:
-        Variables:
-          key1: value1 # A map of key-value pairs that the Lambda function can access
       Code:
-        S3Bucket: 
-        S3Key: 
-        S3ObjectVersion: 
         ZipFile: |
           import json
           def handler(event, context):
@@ -37,7 +24,3 @@ Resources:
           		'body': json.dumps('Hello Python')
           	}
           	return response
-      Tags:
-        - Key: keyname
-          Value: value   
-
