inline lambdas, rollback

--- a/cfn_template_custom_resources.yaml
+++ b/cfn_template_custom_resources.yaml
@@ -5,8 +5,8 @@ Resources:
     Type: AWS::S3::Bucket
     Properties: 
       BucketName: cloudformation-build-incidentsdashboard-jaworra
-
-  lambdaFunction:
+  
+  LambdaFunction1:
     Type: AWS::Lambda::Function
     Properties:
       Description: Python Function Handler
@@ -127,7 +127,31 @@ Resources:
               DATABASE, TABLE, col_wkday, day_of_week,col_wkday,col_hm,col_hm) 
 
             #calls athena query
-            results,query_execution_id = athena_qry(query,DATABASE,S3_OUTPUT,RETRY_COUNT)
+            #results,query_execution_id = athena_qry(query,DATABASE,S3_OUTPUT,RETRY_COUNT)
             print 'invocation'
+            return
+
+          def lambda_handler(event, context):
+            lambda_client = boto3.client('lambda')
+            test_event = '{"name":"test1"}'
+            lambda_client.invoke(
+              FunctionName='target1',
+              InvocationType='Event',
+              Payload=test_event,
+            )
+              responseValue = 120
+              responseData = {}
+              responseData['Data'] = responseValue
+              cfnresponse.send(event, context, cfnresponse.SUCCESS, responseData)
+
+            print 'SUCCESSFUL COMPLETED - lamabda'
             
             return
+            
+
+  Primerinvoke:
+    Type: AWS::CloudFormation::CustomResource
+    DependsOn: LambdaFunction1
+    Version: "1.0"
+    Properties:
+      ServiceToken: !GetAtt LambdaFunction1.Arn
