--- a/cfn_template.yaml
+++ b/cfn_template.yaml
@@ -129,5 +129,9 @@ Resources:
             #calls athena query
             results,query_execution_id = athena_qry(query,DATABASE,S3_OUTPUT,RETRY_COUNT)
             print 'invocation'
-            
             return
+
+            def lambda_handler(event, context):
+                
+                print 'SUCCESSFUL COMPLETED - lamabda'
+                return 
