zip s3 lambda deployment 3

--- a/cfn_template.yaml
+++ b/cfn_template.yaml
@@ -38,4 +38,5 @@ Resources:
       Runtime: python2.7 
       Code:
         S3Bucket: deployment-artefacts-jaworra 
-        S3Key: test_jaworra_cloudformation_build_s3.zip
+        S3Key: test_jaworra_cloudformation_build_s3.zip #Update S3 Key with every upload
+=
